# MLOutliersDetection

./: .gitignore  README.md  main.py  pyproject.toml
src/mloutliersdetection/: __init__.py
