[project]
name = "mloutliersdetection"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "dash>=2.12.1",
    "pandas>=2.0.3",
    "seaborn>=0.12.2",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
devserver = { cmd = "flask run --app ./hello.py --debug" }
http = { cmd = ["python", "-mhttp.server", "8000"] }
dev = { cmd ="python main.py"}